# image-encoder

./: .gitignore  Cargo.toml  build.js  build.sh  build.ts  bun.lockb  dist.sh  image-encoder.darwin-arm64.node  image-encoder.darwin-arm64.node.REMOVED.git-id  image-encoder.darwin-x64.node  image-encoder.darwin-x64.node.REMOVED.git-id  image-encoder.linux-arm64-gnu.node  image-encoder.linux-arm64-gnu.node.REMOVED.git-id  image-encoder.linux-arm64-musl.node  image-encoder.linux-arm64-musl.node.REMOVED.git-id  image-encoder.linux-x64-gnu.node  image-encoder.linux-x64-gnu.node.REMOVED.git-id  image-encoder.linux-x64-musl.node  image-encoder.linux-x64-musl.node.REMOVED.git-id  index.d.ts  index.js  install.ts  package.json  utils.ts
.github/workflows/: CI.yml
.yarn/releases/: yarn-4.5.0.cjs.REMOVED.git-id
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
