[package]
edition = "2021"
name = "image-encoder"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.89"
image = { version = "0.25.2" }
libwebp-sys = "0.9"
napi = { version = "3.0.0-alpha.12", default-features = false, features = ["napi4"] }
napi-derive = "3.0.0-alpha.12"
rayon = "1.10.0"
thiserror = "1.0.64"
webp = "0.3.0"
zip = "2.2.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
