[package]
edition = "2021"
name = "image-encoder"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
jpegxl-rs = { version = "0.11.0", default-features = false, features = [
  "vendored",
] }
anyhow = "1.0.89"
image = { version = "0.25.2", default-features = false, features = [
  "rayon",
  "avif",
  "bmp",
  "jpeg",
  "png",
  "webp",
] }
libwebp-sys = "0.9"
napi = { version = "3.0.0-alpha.12", default-features = false, features = [
  "napi4",
] }
napi-derive = "3.0.0-alpha.12"
rayon = "1.10.0"
thiserror = "1.0.64"
webp = "0.3.0"
zip = "2.2.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
opt-level = 'z'
codegen-units = 1
